# SDiZO_projekt1

./: CMakeLists.txt  README.txt  main.cpp
Application/: ApplicationFacade.cpp  ApplicationFacade.hpp
Application/Menu/: ActionStrategy.cpp  ActionStrategy.hpp  IOhandler.cpp  IOhandler.hpp
Application/Menu/Actions/: BaseAction.hpp  ExitProgram.hpp  HeapOperations.cpp  HeapOperations.hpp  ListOperations.cpp  ListOperations.hpp  Measurements.cpp  Measurements.hpp  TableOperations.cpp  TableOperations.hpp
Containers/: Container.cpp  Container.hpp
Containers/Heap/: Heap.cpp  Heap.hpp
Containers/List/: List.cpp  List.hpp
Containers/List/Utils/: ListNode.hpp
Containers/Table/: Table.cpp  Table.hpp
